minikube/out_2.yaml
---
# Source: spark/templates/networkpolicy-master.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-spark-master
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spark
    app.kubernetes.io/version: 4.0.0
    helm.sh/chart: spark-10.0.2
    app.kubernetes.io/component: master
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-spark
      app.kubernetes.io/name: spark
      app.kubernetes.io/component: master
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 7077
        - port: 80
        - port: 7077
        - port: 8080
---
# Source: spark/templates/networkpolicy-worker.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-spark-worker
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spark
    app.kubernetes.io/version: 4.0.0
    helm.sh/chart: spark-10.0.2
    app.kubernetes.io/component: worker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-spark
      app.kubernetes.io/name: spark
      app.kubernetes.io/component: worker
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 
        - port: 8080
---
# Source: spark/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spark-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spark
    app.kubernetes.io/version: 4.0.0
    helm.sh/chart: spark-10.0.2
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/name: spark
---
# Source: spark/templates/svc-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spark-master-svc
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spark
    app.kubernetes.io/version: 4.0.0
    helm.sh/chart: spark-10.0.2
    app.kubernetes.io/component: master
spec:
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: "Cluster"
  ports:
    - port: 7077
      targetPort: cluster
      name: cluster
      nodePort: 32106
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
      nodePort: 32163
  selector:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/name: spark
    app.kubernetes.io/component: master
---
# Source: spark/templates/statefulset-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-spark-master
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spark
    app.kubernetes.io/version: 4.0.0
    helm.sh/chart: spark-10.0.2
    app.kubernetes.io/component: master
spec:
  serviceName: my-spark-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-spark
      app.kubernetes.io/name: spark
      app.kubernetes.io/component: master
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-spark
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: spark
        app.kubernetes.io/version: 4.0.0
        helm.sh/chart: spark-10.0.2
        app.kubernetes.io/component: master
    spec:
      
      serviceAccountName: my-spark
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-spark
                    app.kubernetes.io/name: spark
                    app.kubernetes.io/component: master
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: spark-master
          image: docker.io/bitnami/spark:4.0.0-debian-12-r2
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: cluster
              containerPort: 7077
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/work
              subPath: app-work-dir
            - mountPath: /mnt/data
              name: host-data
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 180
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
      volumes:
        - name: empty-dir
          emptyDir: {}
        - hostPath:
            path: /mnt/data
          name: host-data
---
# Source: spark/templates/statefulset-worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-spark-worker
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-spark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spark
    app.kubernetes.io/version: 4.0.0
    helm.sh/chart: spark-10.0.2
    app.kubernetes.io/component: worker
spec:
  serviceName: my-spark-headless
  replicas: 2
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-spark
      app.kubernetes.io/name: spark
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-spark
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: spark
        app.kubernetes.io/version: 4.0.0
        helm.sh/chart: spark-10.0.2
        app.kubernetes.io/component: worker
    spec:
      
      serviceAccountName: my-spark
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-spark
                    app.kubernetes.io/name: spark
                    app.kubernetes.io/component: worker
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        seLinuxOptions: {}
        supplementalGroups: []
        sysctls: []
      containers:
        - name: spark-worker
          image: docker.io/bitnami/spark:4.0.0-debian-12-r2
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/spark/work
              subPath: app-work-dir
            - mountPath: /mnt/data
              name: host-data
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 180
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: 8080
          startupProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
      volumes:
        - name: empty-dir
          emptyDir: {}
        - hostPath:
            path: /mnt/data
          name: host-data
